--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Namaste Food</title>
 </head>
 <body>
-    
+    <h1 id="root"> Helloooo React</h1>
+    <script type = "module" src="./App.js"></script>
 </body>
 </html>
