--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Namaste Food</title>
 </head>
 <body>
-    <h1 id="root"> Helloooo React</h1>
+    <div id="root"> Helloooo React</div>
+    <link rel="stylesheet" href ="./index.css"/>
     <script type = "module" src="./App.js"></script>
 </body>
 </html>
