--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <div id="root"> Helloooo React</div>
     <link rel="stylesheet" href ="./index.css"/>
-    <script type = "module" src="./App.js"></script>
+    <script type = "module" src="./src/App.js"></script>
 </body>
 </html>
